04-clustered-pingaccess/pingaccess-admin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pingaccess-admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
    - hosts:
        - myping-pingaccess-admin.ping-local.com
  rules:
    - host: myping-pingaccess-admin.ping-local.com
      http:
        paths:
          # This rule gives internal access to the pingaccess admin services.
          - path: /
            backend:
              serviceName: pingaccess-admin
              servicePort: 9000
